Trying a Newer Node Engine

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "lint": "standard",
     "lint:fix": "standard --fix"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "author": "TCSCODER",
   "license": ""
 }
